--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -14,12 +14,13 @@
   height: 100%;
   max-width: 1100px;
   max-height: 1100px;
-  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 500" preserveAspectRatio="xMidYMid meet"><g opacity="0.3"><path d="M80 300 Q150 220 250 280 Q350 340 420 300" stroke="%23c8e6c9" stroke-width="10" fill="none" stroke-linecap="round" stroke-linejoin="round"/><path d="M120 290 L110 240 L120 210 L130 240 Z" fill="%23c8e6c9"/><path d="M160 285 L150 235 L160 205 L170 235 Z" fill="%23c8e6c9"/><path d="M200 280 L190 230 L200 200 L210 230 Z" fill="%23c8e6c9"/><path d="M240 275 L230 225 L240 195 L250 225 Z" fill="%23c8e6c9"/><path d="M280 280 L270 230 L280 200 L290 230 Z" fill="%23c8e6c9"/><path d="M320 285 L310 235 L320 205 L330 235 Z" fill="%23c8e6c9"/><path d="M360 290 L350 240 L360 210 L370 240 Z" fill="%23c8e6c9"/><polygon points="200,150 205,170 225,170 210,185 215,205 200,190 185,205 190,185 175,170 195,170" fill="%23ffd700" opacity="0.8"/></g></svg>');
+  background-image: url('/logo.svg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
   z-index: 0;
   pointer-events: none;
+  opacity: 0.3;
 }
 
 .dashboard-content {
